--- a/index.qmd
+++ b/index.qmd
@@ -164,7 +164,7 @@ tbl_mc_2024 <- mc_liv |> mutate(pred_wins = pred_mc_wins,
 
 # Summary {#sec-summary}
 
-At the half-way point in the 2023/24 Premier League season, I was reading the ESPN article [What's wrong at Arsenal?](https://www.espn.co.uk/football/insider/insider/story/_/id/39241757/explaining-arsenal-losses-investigation-stats-analysis). It's really good and full complicated analysis using expected goals, heatmaps and the inevitable nod to AI. It ends on Arsenal's chances of winning the league at 11% on January 5th 2024.
+At the half-way point in the 2023/24 Premier League season, I was reading the ESPN article [What's wrong at Arsenal?](https://www.espn.co.uk/football/insider/insider/story/_/id/39241757/explaining-arsenal-losses-investigation-stats-analysis). It's really good and full of complicated analysis using expected goals, heatmaps and the inevitable nod to AI. It ends on Arsenal's chances of winning the league at 11% on January 5th 2024.
 
 I'd previously read Oliver Johnson's Substack on [New Year's resolutions](https://bristoliver.substack.com/p/the-edge-is-everything) which included a binomial model of Ronny O'Sullivan's frame win and match win rate.
 
@@ -178,11 +178,11 @@ Meanwhile Liverpool have a win rate of `r round(100*(150/228),0)`% and draw rate
 
 Assuming there is regression to the mean, I also calculated @tbl-2024-mean for their six season mean win rates for Manchester City and Liverpool for the remaining matches. In this scenario Manchester City beat Liverpool by two points.
 
-I don't expect these models to stand up well, but they show how fine the margins are. A regression to the mean in draw rate for Liverpool corresponding with a corresponding change for Manchester City is enough to change the outcome.  
+I don't expect these models to stand up well, but they show how fine the margins are. A regression to the mean in draw rate for Liverpool corresponding with a corresponding change for Manchester City is enough to change the outcome.
 
 It would be a surprise if Aston Villa won the league, an even bigger one if Arsenal somehow won.
 
-It would also be surprising if any team ran away with the title, so it should be an exciting second half to the season whatever happens. 
+It would also be surprising if any team ran away with the title, so it should be an exciting second half to the season whatever happens.
 
 ```{r}
 #| label: tbl-2024
@@ -204,8 +204,7 @@ tbl_mc_2024 |> select(Club = club, Matches = matches,
 
 ## The model {#sec-the-model}
 
-I got data for the 2023/24 seasons from [Footystats](https://footystats.org/england/premier-league#), and from Wikipedia
-for [Liverpool's seasons](https://en.wikipedia.org/wiki/List_of_Liverpool_F.C._seasons) and [Manchester City's seasons](https://en.wikipedia.org/wiki/List_of_Manchester_City_F.C._seasons).
+I got data for the 2023/24 seasons from [Footystats](https://footystats.org/england/premier-league#), and from Wikipedia for [Liverpool's seasons](https://en.wikipedia.org/wiki/List_of_Liverpool_F.C._seasons) and [Manchester City's seasons](https://en.wikipedia.org/wiki/List_of_Manchester_City_F.C._seasons).
 
 @tbl-prem-league-2024 shows the statistics for the top four positions on the 2nd of January 2024.
 
@@ -215,15 +214,11 @@ for [Liverpool's seasons](https://en.wikipedia.org/wiki/List_of_Liverpool_F.C._s
 top_four |> kable(digits = 3) |> kable_styling("striped")
 ```
 
-I used the win and draw percentages for each team and
-their number of remaining matches to generate binomial distributions of the probability
-of the total number of wins or draws. In the form `dbinom(1:x,x,y)` where `x` is the number of matches and `y` is the probability of winning or drawing. 
+I used the win and draw percentages for each team and their number of remaining matches to generate binomial distributions of the probability of the total number of wins or draws. In the form `dbinom(1:x,x,y)` where `x` is the number of matches and `y` is the probability of winning or drawing.
 
-@fig-pred-wins-2024 shows the distribution for wins and @fig-pred-draws-2024 shows
-the distribution for the draws.
+@fig-pred-wins-2024 shows the distribution for wins and @fig-pred-draws-2024 shows the distribution for the draws.
 
-For a point prediction, I then used the maximum probabilities for wins and draws 
-to calculate the points accrued and subsequent points total for each team for @tbl-2024.
+For a point prediction, I then used the maximum probabilities for wins and draws to calculate the points accrued and subsequent points total for each team for @tbl-2024.
 
 ```{r}
 #| label: fig-pred-wins-2024
@@ -237,8 +232,7 @@ plt_2024
 plt_draws
 ```
 
-I repeated this using the six year win and draw averages for Manchester City and Liverpool which 
-yields @fig-pred-wins-mean and @fig-pred-draws-mean respectively. And @tbl-2024-mean.
+I repeated this using the six year win and draw averages for Manchester City and Liverpool which yields @fig-pred-wins-mean and @fig-pred-draws-mean respectively. And @tbl-2024-mean.
 
 ```{r}
 #| label: fig-pred-wins-mean
@@ -251,4 +245,3 @@ plt_mean
 #| fig-cap: Binomial distribution of draws for remaining matches based on a regression to mean form for Liverpool and Manchester City.
 plt_mean_dr
 ```
-
