--- a/index.qmd
+++ b/index.qmd
@@ -102,6 +102,27 @@ t5_tbl <- top_five |> select(Club = club, Matches = matches,
                    "% Lost" = prct_loss) |> 
   kable(digits = 3) |> kable_styling("striped")
 
+liv_six <- tibble(win = c(21,30,32,20,28,19),
+                  draw = c(12,7,3,9,8,10),
+                  lose = c(5,1,3,9,2,9),
+                  played = rep(38,6))
+
+liv_avg <- liv_six |> 
+  summarise(win_pct = sum(win)/sum(played),
+            drw_pct = sum(draw)/sum(played),
+            loss_pct = sum(lose)/sum(played))
+
+mc_six <- tibble(win = c(32,32,26,27,29,28),
+                  draw = c(4,2,3,5,6,5),
+                  lose = c(2,4,9,6,3,5),
+                  played = rep(38,6))
+
+mc_avg <- mc_six |> 
+  summarise(win_pct = sum(win)/sum(played),
+            drw_pct = sum(draw)/sum(played),
+            loss_pct = sum(lose)/sum(played))
+
+
 mc <- top_four |> filter(club == "Man_City") |> mutate(prct_win = 174/228, 
              prct_draw = 25/228)
 
